# welcome-to-cse

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
contributing/: index.html
cse_fysc/: index.html
css/: carousel.css  general.css
curriculum/: index.html
docs/: index.md
docs/curriculum/: index.md
docs/my-major/: index.md
major_basic/: index.html
major_basic/example/: index.html
major_elective/: index.html
major_elective/example/: index.html
major_mandatory/: index.html
major_mandatory/example/: index.html
my-major/: index.html
others/: index.html
overrides/partials/: comments.html
practice/: index.html
practice/example/: index.html
recommend/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/contributing/: index.html
site/cse_fysc/: index.html
site/css/: carousel.css  general.css
site/major_elective/example/: index.html
site/my-major/: index.html
site/practice/example/: index.html
site/search/: search_index.json
site/template/: index.html
template/: index.html
