[tool.poetry]
name = "welcome-to-cse"
version = "0.1.0"
description = ""
authors = ["Saida <saidalove@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "1.6.0"
mkdocs-material = "9.5.28"
mkdocs-material-extensions = "1.3.1"
pymdown-extensions = "^10.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
